add tests: impress.js & d3

--- a/index.html
+++ b/index.html
@@ -127,7 +127,55 @@
           </tr> 
         </table>
       </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            <a href="cases/case_impress/index.html" target="_blank">Test Impress.js</a>
+          </h3>
+        </div>
+        <div class="panel-body">
+          
+          <a href="cases/case_impress/index.html" target="_blank">zum Test</a>
+        </div>
+        <!-- Table -->
+        <table class="table">
+          <tr>
+              <th>Bildmasse</th>
+              <th>Dateigrösse</th>
+              <th></th>
+          </tr>
+          <tr>
+            <td>7173 × 9328</td>
+            <td>8,4 M</td>
+            <td></td>    
+          </tr> 
+        </table>
+      </div>
 
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            <a href="cases/case_d3/index.html" target="_blank">Test d3</a>
+          </h3>
+        </div>
+        <div class="panel-body">
+          Komplettes Hintergrundbild verkleinert um 50%
+          <a href="cases/case_d3/index.html" target="_blank">zum Test</a>
+        </div>
+        <!-- Table -->
+        <table class="table">
+          <tr>
+              <th>Bildmasse</th>
+              <th>Dateigrösse</th>
+              <th></th>
+          </tr>
+          <tr>
+            <td>7173 × 9328</td>
+            <td>8,4 M</td>
+            <td></td>    
+          </tr> 
+        </table>
+      </div>
     </div><!-- /.container -->
 
 
