zoomooz fixed image size & css resets

--- a/cases/case_zoomooz/index.html
+++ b/cases/case_zoomooz/index.html
@@ -15,7 +15,7 @@
 
   <div id="viewport" class="zoomViewport">
     <div id="container" class="zoomContainer">
-      <img id="image" src="../../media/layout_boa_width-50pc.jpg" width="920" />
+      <img id="image" src="../../media/layout_boa_w1500.jpg" width="1500" height="1951" />
       <div class="label zoomTarget" id="label1"  data-targetsize="0.6" data-closeclick="true">
           Carrer
         </div>
